# talks

./: .gitignore  README.md
cmake/: CMakeLists.txt  LICENSE
cmake/examples/cmake/01-cmake-list-options/: CMakeLists.txt  list-cmake-parameters-ccmake.sh  list-cmake-parameters-cmake-lh.sh
cmake/examples/cmake/02-cmake-if-error/: CMakeLists.txt
cmake/examples/cmake/03-cmake-func-vs-no-func/: CMakeLists.txt  func-vs-no-func.sh
cmake/examples/cmake/04-cmake-empty-set/: CMakeLists.txt  empty-set.sh  main.cpp  test.cpp  test.h
cmake/examples/cmake/05-cmake-simple-function/: CMakeLists.txt
cmake/examples/cmake/06-cmake-2.8.12-subdirectory-clutter/: CMakeLists.txt
cmake/examples/cmake/06-cmake-2.8.12-subdirectory-clutter/subprojects/: CMakeLists.txt
cmake/examples/cmake/06-cmake-2.8.12-subdirectory-clutter/subprojects/project1/: main.cpp
cmake/examples/cmake/06-cmake-2.8.12-subdirectory-clutter/subprojects/project2/: main.cpp
cmake/examples/cmake/06-cmake-2.8.12-subdirectory-clutter/subprojects/project3/: main.cpp
cmake/examples/cmake/06-cmake-2.8.12-subdirectory-clutter/subprojects/project4/: main.cpp
cmake/examples/cmake/06-cmake-2.8.12-subdirectory-clutter/subprojects/project5/: main.cpp
cmake/examples/cmake/07-access-modifiers/: CMakeLists.txt  lib.cpp
cmake/examples/cmake/08-target-aliases/: CMakeLists.txt  functions.cmake  tests.cpp
cmake/examples/cmake/09-avoid-file-glob/: CMakeLists.txt  avoid-glob.sh
cmake/examples/cmake/10-coverage-report/: CMakeLists.txt  display-coverage-report.sh  main.cpp
cmake/examples/cmake/11-package-managers/conan/: CMakeLists.txt  conanfile.txt  obtain-doctest.sh  tests.cpp
cmake/examples/cmake/11-package-managers/hunter/: CMakeLists.txt
cmake/examples/cmake/11-package-managers/vcpkg/: CMakeLists.txt  main.cpp  obtain-gtest.sh
cmake/examples/cmake/12-clang-format/: CMakeLists.txt  display-format-errors.sh  format.sh  style-format.cmake
cmake/examples/cmake/13-clang-tidy/: CMakeLists.txt
cmake/examples/cmake/13-clang-tidy/src/: lib.hpp
cmake/examples/cmake/14-ctest/: CMakeLists.txt  test1.cpp  test2.cpp
cmake/examples/cmake/15-ctest-advanced/: CMakeLists.txt  run-ctest.sh
cmake/examples/cmake/15-ctest-advanced/subdirtests/: CMakeLists.txt
cmake/examples/cmake/16-cpack/: CMakeLists.txt  CPackConfig.cmake  use-cpack.sh
cmake/examples/cmake/16-cpack/src/: lib.cpp  main.cpp
cmake/examples/cpp/visit-struct/: CMakeLists.txt  basic.cpp  cout.cpp  to_json.cpp  visit_struct.hpp
cmake/slides/: 01-intro.md  02-basic-usage-as-user.md  03-basic-usage-as-developer.md  04-things-to-know.md  05-code-structuring.md  06-modern-cmake.md  07-integration-with-external-tooling.md  08-ctest-cpack.md  09-cpp-bonus.md  10-outro.md  CMakeLists.txt  style-dark.css.in  style.css.in
