include_directories(project1/dependency/include)
add_library(project1 main.cpp)

include_directories(project2/dependency/include)
add_library(project2 main.cpp)

include_directories(project3/dependency/include)
add_library(project3 main.cpp)

include_directories(project4/dependency/include)
add_library(project4 main.cpp)

include_directories(project5/dependency/include)
add_library(project5 main.cpp)

